2010-06-13  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.1.7 (TYPO3 4.4i RC1)

2010-06-12  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #13431: Include BE:forceCharset config option (thanks to Armin Guenther)

2010-06-11  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14405: Rename the test cases from *_testcase to *Test

2010-06-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14479: Speed up Oracle layer by not defaulting to dbms_lob.instr for LIKE query (thanks to Michiel Roos)

2010-05-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #7015: t3lib_DB displays wrong SQL in error case

2010-05-28  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.1.6 (TYPO3 4.4 beta3)

2010-05-27  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14496: SQL parser does not handle ALTER TABLE with character set operation
	* Fixed bug #14456: SQL parser doesn't accept ALTER TABLE statement without CHANGE, DROP or ADD keyword
	* Fixed bug #14457: 1-2-3 Install Process breaks with PostgreSQL

2010-05-21  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14372: Mapping does not work with table alias
	* Follow-up of changeset 32847: DBAL cannot be loaded if typo3conf/ is not writable

2010-05-03  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.1.5 (TYPO3 4.4 beta2)
	* Fixed 1-2-3 installer crash when having only mysql available

2010-05-02  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.1.4 (TYPO3 4.4 beta2)

2010-05-01  Xavier Perseguers  <typo3@perseguers.ch>

	* Fixed bug #14274: Some exception are not caught when trying to install DBAL in 1-2-3 Install Tool process
	* Fixed bug #2186: Error installing static_info_tables
	* Fixed bug #14265: Driver dropdown in install tool should be hidden when only MySQL is available

2010-04-30  Xavier Perseguers  <typo3@perseguers.ch>

	* Set version to 1.1.3

2010-04-29  Xavier Perseguers  <typo3@perseguers.ch>
