@@ -14,6 +14,7 @@
 <script type="text/javascript" src="../contrib/prototype/prototype.js"></script>
 <script type="text/javascript" src="../sysext/install/Resources/Public/Javascript/install.js"></script>
 
+<p>###LLDESCRIPTION###</p>
 <form method="post" action="###ACTION###">
 	<fieldset class="t3-install-form-label-width-7">
 		<ol>
