@@ -1,3 +1,7 @@
+2010-06-22  Jeff Segars  <jeff@webempoweredchurch.org>
+
+	* Fixed bug #14814: Improve install tool texts.
+
 2010-06-13  Xavier Perseguers  <typo3@perseguers.ch>
 
 	* Set version to 1.1.7 (TYPO3 4.4i RC1)
